mobile navigation overflow fix

--- a/src/assets/scss/base/section.scss
+++ b/src/assets/scss/base/section.scss
@@ -6,8 +6,8 @@
   overflow: hidden;
 
   @media screen  and (max-width: 768px) {
-    padding-top: 60px;
-    padding-bottom: 60px;
+    padding-top: 80px;
+    padding-bottom: 80px;
   }
 
   &.full-height {
